agregamos texto de experimento

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Git y Github</title>
 </head>
 <body>
+    <header>
+        <h1>experimento</h1>
+    </header>
     <div class="container">
         <h2>Katherine Moscoso</h2>
     </div>
+    <footer>
+        <p>Este es un experimento en nuestra rma</p>
+    </footer>
 </body>
 </html>
