--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>experimento</h1>
+        <p>haciendo cambios</p>
     </header>
     <div class="container">
         <h2>Katherine Moscoso</h2>
